Desafio complementario Clase 6. Arrays

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     
+    <div>
+        <input id='busqueda' type='text'>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
