--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Complementario Clase 3 | Facundo Vandecaveye</title>
+    <title>Desafio Complementario Clase 6 Arrays | Facundo Vandecaveye</title>
 </head>
 <body>
-    
-    <div>
-        <input id='busqueda' type='text'>
-    </div>
 
     <script src="./app.js"></script>
 </body>
