Se finalizo la 1ra pre entrega final

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Complementario Clase 6 Arrays | Facundo Vandecaveye</title>
+    <title>1ra Pre entrega Final | Facundo Vandecaveye</title>
 </head>
 <body>
 
