Se finalizo el desafio de Interactuando con HTML

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1ra Pre entrega Final | Facundo Vandecaveye</title>
+    <title>Interactuar con HTML | Facundo Vandecaveye</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
+    <div class="guias-container" id="guias">
 
-    <script src="./app.js"></script>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
