Se termino el desafio optimizando proyecto final

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         <div class="logoHeader">
             <a href="index.html"><img src="./img/m.png" alt="Logo de la pagina"></a>
         </div>
-
+        <div>
+            <button class="switch" id="dark">
+                <span><i class="fas fa-sun"></i></span>
+                <span><i class="fas fa-moon"></i></span>
+            </button>
+        </div>
         <nav class="navMenu">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -44,6 +49,7 @@
         <section class="primeraSeccion wrap">
             <div class="wrap-texto">
                 <h1>Melany Nutricion</h1>
+                <h2 class="textJs">Aprende <span class="autoType"></span></h2>
                 <a href="./pages/reserva.html" class="buttom">Reserva tu turno</a>
                 
             </div>
@@ -130,5 +136,9 @@
             </div>
         </footer>
     </div>
+
+    <script src="./js/darkmode.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="./js/typed.js"></script>
 </body>
 </html>
