--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -22,6 +22,13 @@
             <div class="logoHeader">
                 <a href="../index.html"><img src="../img/m.png" alt="Logo de la pagina"></a>
             </div>
+            <div>
+                <button class="switch" id="dark">
+                    <span><i class="fas fa-sun"></i></span>
+                    <span><i class="fas fa-moon"></i></span>
+                </button>
+            </div>
+
             <ul>
                 <li class="submenu">
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -40,6 +47,7 @@
 
                             </tbody>
                         </table>
+                        <a href="#" id="comprar-carrito" class="buy-card u-full-width">Comprar</a>
                         <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                     </div>
                 </li>
@@ -171,6 +179,9 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="../js/script.js"></script>
+    <script src="../js/darkmode.js"></script>i
+
 </body>
 </html>
