--- a/pages/guias.html
+++ b/pages/guias.html
@@ -21,6 +21,12 @@
             <div class="logoHeader">
                 <a href="../index.html"><img src="../img/m.png" alt="Logo de la pagina"></a>
             </div>
+            <div>
+                <button class="switch" id="dark">
+                    <span><i class="fas fa-sun"></i></span>
+                    <span><i class="fas fa-moon"></i></span>
+                </button>
+            </div>
             <ul>
                 <li class="submenu">
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -139,5 +145,6 @@
         </footer>
     </div>
     <script src="../js/script.js"></script>
+    <script src="../js/darkmode.js"></script>
 </body>
 </html>
