--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -21,6 +21,12 @@
             <div class="logoHeader">
                 <a href="../index.html"><img src="../img/m.png" alt="Logo de la pagina"></a>
             </div>
+            <div>
+                <button class="switch" id="dark">
+                    <span><i class="fas fa-sun"></i></span>
+                    <span><i class="fas fa-moon"></i></span>
+                </button>
+            </div>
             <nav class="navMenu">
                 <input type="checkbox" id="check">
                 <label for="check" class="checkbtn">
@@ -104,5 +110,6 @@
             </div>
         </footer>
     </div>
+    <script src="/js/darkmode.js"></script>
 </body>
 </html>
