Se termino la incorporacion de librerias

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -181,6 +181,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="../js/script.js"></script>
+    <script src="../js/confetti.js"></script>
     <script src="../js/darkmode.js"></script>i
 
 </body>
