Se realizaron los ultimos ajustes de la entrega final

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <title>MelanyNutricion | Inicio</title>
 </head> 
 <body>
+
+    <!-- Loader -->
+
+    <div class="preloader">
+        <div class="spinner">
+            <div class="spinner">
+                <div class="spinner">
+                        <div class="spinner">
+
+                        </div>
+                </div>
+            </div>
+        </div>
+        
+        
+
+    </div>
+
     <!-- Encabezado -->
     <div class="contenedorGeneral">
     <header class="header">
@@ -137,6 +155,7 @@
         </footer>
     </div>
 
+    <script src="./js/preloader.js"></script>
     <script src="./js/darkmode.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="./js/typed.js"></script>
