--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -15,6 +15,24 @@
     <title>MelanyNutricion | Reserva tu turno</title>
 </head>
 <body>
+
+    <!-- Loader -->
+
+    <div class="preloader">
+        <div class="spinner">
+            <div class="spinner">
+                <div class="spinner">
+                        <div class="spinner">
+
+                        </div>
+                </div>
+            </div>
+        </div>
+        
+        
+
+    </div>
+
     <!-- Encabezado -->
     <div class="contenedorGeneral">
         <header class="header">
@@ -110,6 +128,7 @@
             </div>
         </footer>
     </div>
+    <script src="./js/preloader.js"></script>
     <script src="/js/darkmode.js"></script>
 </body>
 </html>
