--- a/pages/atencion_online.html
+++ b/pages/atencion_online.html
@@ -15,6 +15,24 @@
     <title>MelanyNutricion | Atencion Online</title>
 </head>
 <body>
+
+    <!-- Loader -->
+
+    <div class="preloader">
+        <div class="spinner">
+            <div class="spinner">
+                <div class="spinner">
+                        <div class="spinner">
+
+                        </div>
+                </div>
+            </div>
+        </div>
+        
+        
+
+    </div>
+
     <!-- Encabezado -->
     <div class="contenedorGeneral">
         <header class="header">
@@ -102,6 +120,8 @@
             </div>
         </footer>
 </div>
+
+<script src="./js/preloader.js"></script>
 <script src="/js/darkmode.js"></script>
 </body>
 </html>
