--- a/pages/atencion_domicilio.html
+++ b/pages/atencion_domicilio.html
@@ -120,7 +120,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/preloader.js"></script>
+    <script src="../js/preloader.js"></script>
     <script src="/js/darkmode.js"></script>
 </body>
 </html>
