--- a/pages/atencion_online.html
+++ b/pages/atencion_online.html
@@ -121,7 +121,7 @@
         </footer>
 </div>
 
-<script src="./js/preloader.js"></script>
+<script src="../js/preloader.js"></script>
 <script src="/js/darkmode.js"></script>
 </body>
 </html>
