--- a/pages/guias.html
+++ b/pages/guias.html
@@ -162,7 +162,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/preloader.js"></script>
+    <script src="../js/preloader.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/darkmode.js"></script>
 </body>
