--- a/pages/plan_alimentacion.html
+++ b/pages/plan_alimentacion.html
@@ -121,7 +121,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/preloader.js"></script>
+    <script src="../js/preloader.js"></script>
     <script src="../js/darkmode.js"></script>
 </body>
 </html>
