--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -128,7 +128,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/preloader.js"></script>
+    <script src="../js/preloader.js"></script>
     <script src="/js/darkmode.js"></script>
 </body>
 </html>
