--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -180,7 +180,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/preloader.js"></script>
+    <script src="../js/preloader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/confetti.js"></script>
